--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbo",
+    "dev2": "next dev",
     "start": "next start",
     "seed": "node -r dotenv/config ./scripts/seed.js"
   },
